# libossia-ue4

./: .gitignore  .gitmodules  init.sh  libossia.uplugin
Source/libossia/: libossia.Build.cs
Source/libossia/Public/: flat_hash_map.hpp  libossia.cpp  libossia.h  nano_function.hpp  nano_signal_slot.hpp  ossia-config.hpp  ossia_export.h  smallfun.hpp
Source/libossia/Public/flat/: flat_map.hpp
Source/libossia/Public/oscpack/ip/: AbstractUdpSocket.h  NetworkingUtils.h  UdpSocket.h
Source/libossia/Public/oscpack/ip/posix/: NetworkingUtils.h  UdpSocket.h
Source/libossia/Public/oscpack/ip/win32/: NetworkingUtils.h  UdpSocket.h
Source/libossia/Public/oscpack/osc/: OscHostEndianness.h  OscOutboundPacketStream.h  OscReceivedElements.h
Source/libossia/Public/servus/: CMakeLists.txt  result.h  servus.h  servus_impl.h  types.h
Source/libossia/Public/servus/android/: dnssd_clientshim.c  dnssd_clientstub.c
Source/libossia/Public/servus/avahi/: servus.h
Source/libossia/Public/servus/dnssd/: servus.h
Source/libossia/Public/servus/none/: servus.h
Source/libossia/Public/servus/qt/: itemModel.h
Source/libossia/Public/websocketpp/: connection.hpp
Source/libossia/Public/websocketpp/http/: parser.hpp
Source/libossia/Public/websocketpp/http/impl/: parser.hpp
Source/libossia/Public/websocketpp/impl/: connection_impl.hpp
Source/libossia/Public/websocketpp/message_buffer/: message.hpp
